# research_bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: config.py  conversation.py  emotion_map.py  feishu_service.py  main.py  stt_service.py  tts_service.py
backend/skills/: cancellation_diagnostic.json
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  avatar.js  pcm-processor.js  speech.js  websocket.js
